--- a/TorrentUserClient/pom.xml
+++ b/TorrentUserClient/pom.xml
@@ -26,10 +26,8 @@
 		</dependency>
 		<dependency>
 			<groupId>restConnector</groupId>
-			<artifactId>crestConnector</artifactId>
+			<artifactId>restConnector</artifactId>
 			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/restConnector.jar</systemPath>
 		</dependency>
 	</dependencies>
 
@@ -45,8 +43,28 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<configuration>
+							<groupId>restConnector</groupId>
+							<artifactId>restConnector</artifactId>
+							<version>1.0</version>
+							<packaging>jar</packaging>
+							<file>${basedir}/lib/restConnector.jar</file>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>2.6</version>
 				<executions>
 					<execution>
 						<id>default-jar</id>
