--- a/com.zheng.torrentbundle/pom.xml
+++ b/com.zheng.torrentbundle/pom.xml
@@ -1,18 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>com.zheng</groupId>
 		<artifactId>FastTransfer</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	
 	<groupId>com.zheng.feature</groupId>
 	<artifactId>com.zheng.torrentbundle</artifactId>
 	<packaging>bundle</packaging>
 	<name>com.zheng.torrentbundle</name>
-
 	<dependencies>
 		<dependency>
 			<groupId>com.turn</groupId>
@@ -28,28 +27,16 @@
 			<groupId>com.ibm.wsspi.org.osgi.cmpn.5.0.0_1.0.9</groupId>
 			<artifactId>com.ibm.wsspi.org.osgi.cmpn.5.0.0_1.0.9</artifactId>
 			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/com.ibm.wsspi.org.osgi.cmpn.5.0.0_1.0.9.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm.wsspi.org.osgi.core.5.0.0_1.0.9</groupId>
 			<artifactId>com.ibm.wsspi.org.osgi.core.5.0.0_1.0.9</artifactId>
 			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/com.ibm.wsspi.org.osgi.core.5.0.0_1.0.9.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>restConnector</groupId>
-			<artifactId>crestConnector</artifactId>
+			<artifactId>restConnector</artifactId>
 			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/restConnector.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.scr.ds-annotations</artifactId>
-			<version>1.2.4</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
@@ -65,9 +52,58 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>install-artifacts.1</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<configuration>
+							<groupId>restConnector</groupId>
+							<artifactId>restConnector</artifactId>
+							<version>1.0</version>
+							<packaging>jar</packaging>
+							<file>${basedir}/lib/restConnector.jar</file>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-artifacts.2</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<configuration>
+							<groupId>com.ibm.wsspi.org.osgi.cmpn.5.0.0_1.0.9</groupId>
+							<artifactId>com.ibm.wsspi.org.osgi.cmpn.5.0.0_1.0.9</artifactId>
+							<version>1.0</version>
+							<packaging>jar</packaging>
+							<file>${basedir}/lib/com.ibm.wsspi.org.osgi.cmpn.5.0.0_1.0.9.jar</file>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-artifacts.3</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<configuration>
+							<groupId>com.ibm.wsspi.org.osgi.core.5.0.0_1.0.9</groupId>
+							<artifactId>com.ibm.wsspi.org.osgi.core.5.0.0_1.0.9</artifactId>
+							<version>1.0</version>
+							<packaging>jar</packaging>
+							<file>${basedir}/lib/com.ibm.wsspi.org.osgi.core.5.0.0_1.0.9.jar</file>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.4.0</version>
+				<version>2.5.0</version>
 				<extensions>true</extensions>
 				<configuration>
 					<manifestLocation>src/main/resources/META-INF</manifestLocation>
@@ -78,30 +114,10 @@
 						<Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
 						<Embed-Transitive>true</Embed-Transitive>
 						<Import-Package>*;resolution:=optional</Import-Package>
+						<_dsannotations>*</_dsannotations>
 					</instructions>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-scr-plugin</artifactId>
-				<version>1.21.0</version>
-				<executions>
-					<execution>
-						<id>generate-scr-scrdescriptor</id>
-						<goals>
-							<goal>scr</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-utils</artifactId>
-						<version>3.0.4</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-
 		</plugins>
 	</build>
 </project>
