--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.zheng</groupId>
-	<artifactId>FastTransfer</artifactId>
+	<groupId>net.wasdev</groupId>
+	<artifactId>sample.fasttransfer</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
-	<name>FastTransfer</name>
+	<name>sample.fasttransfer</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<modules>
 		<module>restConnector</module>
-		<module>com.zheng.torrentbundle</module>
-		<module>TorrentClient</module>
-		<module>TorrentUserClient</module>
+		<module>net.wasdev.fasttransfer</module>
+		<module>FTClient</module>
+		<module>FTAdmin</module>
 	</modules>
 </project>
