--- a/FTAdmin/pom.xml
+++ b/FTAdmin/pom.xml
@@ -25,8 +25,8 @@
 			<version>4.5</version>
 		</dependency>
 		<dependency>
-			<groupId>restConnector</groupId>
-			<artifactId>restConnector</artifactId>
+			<groupId>com.ibm.websphere.jmx.connector.rest</groupId>
+			<artifactId>com.ibm.websphere.jmx.connector.rest</artifactId>
 			<version>1.0</version>
 		</dependency>
 	</dependencies>
